# roboresearch-reward-discovery

./: .gitignore  LICENSE  README.md  program.md  pyproject.toml
roboresearch/: main.py
roboresearch/agents/: __init__.py  client.py  experiment_coder.py  failure_analyst.py  orchestrator.py  quick_evaluator.py
roboresearch/dashboard/: app.py
roboresearch/dashboard/pages/: 1_learning_curves.py  2_experiment_log.py  3_agent_decisions.py  4_cost_tracker.py  5_episode_videos.py
roboresearch/mcp_servers/evaluation/: server.py
roboresearch/mcp_servers/registry/: server.py
roboresearch/mcp_servers/simulation/: server.py
roboresearch/training/: __init__.py  configs.py  env_utils.py  evaluator.py  recorder.py  trainer.py
scripts/: generate_demos.py  long_train.py  render_demos.py  train_pickandplace.py
